--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
   "PASSWORD": "your password",
   "OTPKEY": "",
   "BOTNAME": "─꯭─⃝Shipon bot",
-  "PREFIX": "/",
+  "PREFIX": "..",
   "reactUnsend": ["😡", "🤧", "😤", "😠"],
 
   "ADMINBOT": [
