--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
   "EMAIL": "your email",
   "PASSWORD": "your password",
   "OTPKEY": "",
-  "BOTNAME": "─꯭─⃝sk.shipon bot",
+  "BOTNAME": "─꯭─⃝sk.shipon. bot",
   "PREFIX": "..",
   "reactUnsend": ["😡", "🤧", "😤", "😠"],
 
