--- a/config.json
+++ b/config.json
@@ -10,8 +10,8 @@
   "NOTIFICATION": true,
   "EMAIL": "your email",
   "PASSWORD": "your password",
-  "OTPKEY": "",
-  "BOTNAME": "─꯭─⃝sk.alhaz bot",
+  "OTPKEY": "/",
+  "BOTNAME": "─꯭─⃝sk.alhaz, bot",
   "PREFIX": "..",
   "reactUnsend": ["😡", "🤧", "😤", "😠"],
 
